--- a/FE2/authenticity-fe/package.json
+++ b/FE2/authenticity-fe/package.json
@@ -9,12 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "ethers": "^6.14.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1",
-    "vue3-google-login": "^2.0.33"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
