--- a/FE2/authenticity-fe/package.json
+++ b/FE2/authenticity-fe/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ethers": "^6.14.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
